--- a/rpm_spec/core-dom0-linux.spec.in
+++ b/rpm_spec/core-dom0-linux.spec.in
@@ -50,6 +50,7 @@ Conflicts:	qubes-core-dom0 < 4.0.23
 Requires:	%{name}-kernel-install
 Requires:	xdotool
 Requires:	createrepo_c
+Requires:	qubes-core-dom0-vaio-fixes
 
 Source0: %{name}-%{version}.tar.gz
 
